--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,27 @@
 baseURL = 'http://tk-tech.xyz/'
 languageCode = 'ja-jp'
+defaultContentLanguage = "ja"
 title = 'tk tech'
 theme = 'hugo-coder'
+
+[params]
+author = "xxuxa-k"
+description = "tk's tech blog"
+keywords = "blog,developer,personal"
+# info = ["毎日ゴロゴロ"]
+avatarURL = "images/avatar.jpg"
+
+[[params.social]]
+name = "Github"
+icon = "fa fa-2x fa-github"
+weight = 1
+url = "https://github.com/xxuxa-k"
+
+
+[languages.ja]
+weight = 1
+
+[[languages.ja.menu.main]]
+name = "Blog"
+weight = 1
+url = "blogs/"
